// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить модал c информацией о том, что заявка уже есть, если отправка формы вернула ошибку CONFLICT 1`] = `
<Modal
  animation={true}
  className="PageMatchApplication__modal"
  closer={false}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={30}
>
  <div
    className="PageMatchApplication__modalNotification"
  >
    <div
      className="PageMatchApplication__modalNotificationContent"
    >
      <IconSvg
        className="PageMatchApplication__iconSuccess"
        id="svgID"
        size="64"
      />
      <div
        className="PageMatchApplication__modalNotificationTitle"
      >
        Такая заявка уже отправлена
      </div>
      <div
        className="PageMatchApplication__modalNotificationText"
      >
        Специалисты работают с ней
      </div>
    </div>
    <Link
      className="PageMatchApplication__modalNotificationButton"
      onClick={[Function]}
    >
      Хорошо
    </Link>
  </div>
</Modal>
`;

exports[`должен отрендерить модал c информацией об ошибке, если отправка формы вернула любую ошибку, кроме CONFLICT 1`] = `
<Modal
  animation={true}
  className="PageMatchApplication__modal"
  closer={false}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={30}
>
  <div
    className="PageMatchApplication__modalNotification"
  >
    <div
      className="PageMatchApplication__modalNotificationContent"
    >
      <IconSvg
        className="PageMatchApplication__iconWarning"
        id="svgID"
        size="64"
      />
      <div
        className="PageMatchApplication__modalNotificationTitle"
      >
        Ой!
      </div>
      <div
        className="PageMatchApplication__modalNotificationText"
      >
        Произошла ошибка
      </div>
    </div>
    <Link
      className="PageMatchApplication__modalNotificationButton"
      onClick={[Function]}
    >
      Закрыть
    </Link>
  </div>
</Modal>
`;

exports[`должен отрендерить модал c информацией об успешной отправке, в случае успешной отправки формы 1`] = `
<Modal
  animation={true}
  className="PageMatchApplication__modal"
  closer={false}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={30}
>
  <div
    className="PageMatchApplication__modalNotification"
  >
    <div
      className="PageMatchApplication__modalNotificationContent"
    >
      <IconSvg
        className="PageMatchApplication__iconSuccess"
        id="svgID"
        size="64"
      />
      <div
        className="PageMatchApplication__modalNotificationTitle"
      >
        Заявка отправлена!
      </div>
      <div
        className="PageMatchApplication__modalNotificationText"
      >
        Скоро наш специалист свяжется с вами и подберёт дилеров с лучшими предложениями
      </div>
    </div>
    <Link
      className="PageMatchApplication__modalNotificationButton"
      onClick={[Function]}
    >
      Хорошо
    </Link>
  </div>
</Modal>
`;

exports[`должен отрендерить модал с просьбой выбрать другой авто, если проверка показала, что нет предложений по такой марке-модели 1`] = `
<Modal
  animation={true}
  className="PageMatchApplication__modal"
  closer={false}
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={30}
>
  <div
    className="PageMatchApplication__modalNotification"
  >
    <div
      className="PageMatchApplication__modalNotificationContent"
    >
      <IconSvg
        className="PageMatchApplication__iconWarning"
        id="svgID"
        size="64"
      />
      <div
        className="PageMatchApplication__modalNotificationTitle"
      >
        Ой!
      </div>
      <div
        className="PageMatchApplication__modalNotificationText"
      >
        Автомобилей с выбранными параметрами сейчас нет
      </div>
    </div>
    <Link
      className="PageMatchApplication__modalNotificationButton"
      onClick={[Function]}
    >
      Закрыть
    </Link>
  </div>
</Modal>
`;
